<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/capture_image"
        android:icon="@mipmap/ic_action_camera"
        android:title="@string/camera"
        android:orderInCategory="50"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/manage_site"
        android:title="@string/manage_site"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
